fix overflow bug

--- a/src/components/stars.scss
+++ b/src/components/stars.scss
@@ -74,7 +74,7 @@
 }
 
 .contact-background {
-  // overflow: hidden;
+  overflow: auto;
   background: radial-gradient(ellipse at bottom, #1B2735 0%, #090A0F 100%);
   height: 1000px;
   min-height: 100vh;
